WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301453
Fix TAPI verification errors on ARM64_32 builds.
https://bugs.webkit.org/show_bug.cgi?id=301453
Summary
Fix TAPI verification errors on ARM64_32 builds.
Mark Lam
Reported
2025-10-24 16:40:18 PDT
The fix entails: 1. Change pas_config.h's default setting of LIBPAS_ENABLED to 1 only apply when PAS_CPU(ADDRESS64). Otherwise default it to 0. 2. Add #if LIBPAS_ENABLED + #endif around the content of many libpas header files that TAPI complains about for ARM64_32 builds. libpas does not support ARM64_32 targets. Hence, on ARM64_32 builds, libpas is disabled. So, it is correct to #if out all the libpas code in those header files.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-24 16:40:35 PDT
<
rdar://problem/163372818
>
Mark Lam
Comment 2
2025-10-24 16:47:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52980
EWS
Comment 3
2025-10-26 23:34:50 PDT
Committed
302174@main
(501c1d5fe26d): <
https://commits.webkit.org/302174@main
> Reviewed commits have been landed. Closing PR #52980 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug