Fix TAPI verification errors on ARM64_32 builds. https://bugs.webkit.org/show_bug.cgi?id=301453 rdar://163372818

Reviewed by Keith Miller and Yusuke Suzuki.

The fix entails:
1. Change pas_config.h's default setting of LIBPAS_ENABLED to 1 only apply when PAS_CPU(ADDRESS64).
   Otherwise default it to 0.
2. Add #if LIBPAS_ENABLED + #endif around the content of many libpas header files that TAPI
   complains about for ARM64_32 builds.

libpas does not support ARM64_32 targets.  Hence, on ARM64_32 builds, libpas is disabled.  So, it
is correct to #if out all the libpas code in those header files.

No new tests needed because the build verifies the fix.
.
* Source/bmalloc/libpas/src/libpas/bmalloc_heap_config.h:
* Source/bmalloc/libpas/src/libpas/bmalloc_heap_inlines.h:
* Source/bmalloc/libpas/src/libpas/hotbit_heap_config.h:
* Source/bmalloc/libpas/src/libpas/pas_bitfit_allocator_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_compact_tagged_page_granule_use_count_ptr.h:
* Source/bmalloc/libpas/src/libpas/pas_compact_tagged_unsigned_ptr.h:
* Source/bmalloc/libpas/src/libpas/pas_compact_thread_local_cache_layout_node.h:
* Source/bmalloc/libpas/src/libpas/pas_config.h:
* Source/bmalloc/libpas/src/libpas/pas_deallocate.h:
* Source/bmalloc/libpas/src/libpas/pas_designated_intrinsic_heap_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_exclusive_view_template_memo_table.h:
* Source/bmalloc/libpas/src/libpas/pas_full_alloc_bits_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_heap_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_local_allocator_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_segregated_exclusive_view_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_segregated_page_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_segregated_size_directory.h:
* Source/bmalloc/libpas/src/libpas/pas_segregated_size_directory_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_segregated_view_allocator_inlines.h:
* Source/bmalloc/libpas/src/libpas/pas_thread_local_cache.h:
* Source/bmalloc/libpas/src/libpas/pas_thread_local_cache_layout.h:
* Source/bmalloc/libpas/src/libpas/pas_thread_local_cache_layout_entry.h:
* Source/bmalloc/libpas/src/libpas/pas_try_allocate.h:
* Source/bmalloc/libpas/src/libpas/pas_try_allocate_array.h:
* Source/bmalloc/libpas/src/libpas/pas_try_allocate_common.h:
* Source/bmalloc/libpas/src/libpas/pas_try_allocate_intrinsic.h:
* Source/bmalloc/libpas/src/libpas/pas_try_allocate_primitive.h:
* Source/bmalloc/libpas/src/libpas/pas_try_reallocate.h:

Canonical link: https://commits.webkit.org/302174@main