Source/bmalloc/libpas/src/libpas/bmalloc_heap_config.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Apple Inc. All rights reserved.
+ * Copyright (c) 2021-2025 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,6 +28,7 @@
 
 #include "pas_config.h"
 
+#if LIBPAS_ENABLED
 #if PAS_ENABLE_BMALLOC
 
 #include "bmalloc_type.h"
@@ -87,5 +88,5 @@ PAS_END_EXTERN_C;
 
 #endif /* PAS_ENABLE_BMALLOC */
 
+#endif /* LIBPAS_ENABLED */
 #endif /* BMALLOC_HEAP_CONFIG_H */
-
