Source/bmalloc/libpas/src/libpas/pas_config.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018-2021 Apple Inc. All rights reserved.
+ * Copyright (c) 2018-2025 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -51,7 +51,11 @@
 #define PAS_LOG_LEVEL (PAS_LOG_NONE)
 #define PAS_SHOULD_LOG(level) (PAS_LOG_LEVEL & level)
 
+#if PAS_CPU(ADDRESS64)
 #define LIBPAS_ENABLED 1
+#else
+#define LIBPAS_ENABLED 0
+#endif
 
 #if defined(PAS_BMALLOC)
 #include "BPlatform.h"
