Source/bmalloc/libpas/src/libpas/pas_deallocate.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019-2021 Apple Inc. All rights reserved.
+ * Copyright (c) 2019-2025 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -38,6 +38,8 @@
 #include "pas_system_heap.h"
 #include "pas_thread_local_cache.h"
 #include "pas_utils.h"
+
+#if LIBPAS_ENABLED
 
 PAS_BEGIN_EXTERN_C;
 
@@ -223,5 +225,5 @@ static PAS_ALWAYS_INLINE void pas_deallocate(void* ptr,
 
 PAS_END_EXTERN_C;
 
+#endif /* LIBPAS_ENABLED */
 #endif /* PAS_DEALLOCATE_H */
-
