Source/bmalloc/libpas/src/libpas/pas_try_allocate_intrinsic.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019-2021 Apple Inc. All rights reserved.
+ * Copyright (c) 2019-2025 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -30,6 +30,8 @@
 #include "pas_heap.h"
 #include "pas_intrinsic_heap_support.h"
 #include "pas_try_allocate_common.h"
+
+#if LIBPAS_ENABLED
 
 PAS_BEGIN_EXTERN_C;
 
@@ -332,5 +334,5 @@ typedef pas_allocation_result (*pas_try_allocate_intrinsic_for_realloc)(size_t s
 
 PAS_END_EXTERN_C;
 
+#endif /* LIBPAS_ENABLED */
 #endif /* PAS_TRY_ALLOCATE_INTRINSIC_H */
-
